poc/tests/errors/test_FplVariableAlreadyDeclared_functional_term_01.fpl
Test.Namespace
{
    theory
    {
        function Test(x: Nat) -> Nat
        {
            x: Nat
            return x
        }
    }
}

##############################

FplVariableAlreadyDeclared:7:13: The name 'x' was already declared in the current context at (5,23)